--- a/index.html
+++ b/index.html
@@ -211,6 +211,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 alt="" class="nsImg">
         </div>
     </div>
+   <div class="feedback">
+        <h2>We value your feedback</h2>
+        <form id="feedbackForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" placeholder="Your name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" placeholder="Your email" required>
+
+            <label for="feedback">Your Feedback:</label>
+            <textarea id="feedback" name="feedback" rows="4" placeholder="Write your feedback here" required></textarea>
+
+            <button type="submit" class="feedbackButton">Submit Feedback</button>
+        </form>
+    </div>
     <footer>
         <div class="footerLeft">
             <div class="footerMenu">
