--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
             </div>
             <div class="navItem">
-                <span class="limitedOffer">Limited Offer!</span>
+                <a href="privacy_policy.pdf" download="Policy_Document" class="btn btn-primary">Policy Document</a>
             </div>
         </div>
         <div class="navBottom">
